--- a/03-post-process/output-plots-children/02-mcmc-diags.Rmd
+++ b/03-post-process/output-plots-children/02-mcmc-diags.Rmd
@@ -30,6 +30,30 @@ rho_discard = all_rho[!(all_rho %in% rho_keep)]
 diag_post = suppressMessages(post_remove(diag_post, rho_discard, ask = FALSE))
 ```
 
+```{r discard-MIN-HOR}
+# specify the nodes where Minam parameters aren't informed by data, and thus need no MCMC diagnostics
+discard_params = c(
+  "mu_phi_Mb_Ma[LH_type,origin,pop]",
+  "^phi_Mb_Ma[year,LH_type,origin,pop]",
+  "delta_O0_O1[pop]",
+  "mu_psi_O1[origin,pop]",
+  "^psi_O1[year,origin,pop]",
+  "mu_psi_O2[origin,pop]",
+  "^psi_O2[year,origin,pop]"
+)
+
+# replace the placeholder index names with the specific elements in question
+no_mcmc_diags_Minam = lapply(discard_params, sub_index, pop = j_min) |>
+  lapply(sub_index, LH_type = i_spring) |>
+  lapply(sub_index, origin = o_hor) |>
+  lapply(sub_index, year = ts_yrs) |>
+  lapply(unique) |>
+  unlist()
+
+# remove these nodes from the posterior samples that will have MCMC diagnostics ran
+diag_post = suppressMessages(post_remove(diag_post, params = no_mcmc_diags_Minam, ask = FALSE))
+```
+
 ```{r mcmc-diag-function}
 # a function to get MCMC diagnoses for a group of parameters
 # params: a string to match with postpack::match_params()
@@ -385,7 +409,7 @@ diags_table = diags_table[diags_table$n_params > 0,]
 
 ## Summary Table
 
-This table displays summaries of MCMC diagnostics for all unobserved stochastic nodes in the model. Values in cells represent the percentage of parameters of a given type that fail a diagnostic check. E.g., 50% in the "Rhat > 1.05" column means that half of the parameters of that type had $\hat{R}$ values greater than 1.05. Cells with no color indicate no offense and darker reds indicate greater frequency of an offense.
+This table displays summaries of MCMC diagnostics for all unobserved stochastic nodes in the model (excluding those that are not informed by data, such as HOR Minam maturation or HOR smolt survival; these parameters are sampled purely for organizational purposes in the model). Values in cells represent the percentage of parameters of a given type that fail a diagnostic check. E.g., 50% in the "Rhat > 1.05" column means that half of the parameters of that type had $\hat{R}$ values greater than 1.05. Cells with no color indicate no offense and darker reds indicate greater frequency of an offense.
 
 * $\boldsymbol{\hat{R}}$ measures convergence of multiple chains to a common target distribution. Values close to 1 are ideal but values greater than 1.2 should be considered not well-converged (general rules of thumb).
 * **ESS** measures the number of effective MCMC samples are available to estimate a given summary statistic of the posterior -- here the posterior mean and quantiles of the 95% equal-tailed CRI. Percentages shown represent the fraction of parameters that have fewer than 400 ESS -- Vehtari et al. [2021](https://projecteuclid.org/journals/bayesian-analysis/advance-publication/Rank-Normalization-Folding-and-Localization--An-Improved-R%cb%86-for/10.1214/20-BA1221.full) suggests 400 as a good rule of thumb.
